--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -55,7 +55,8 @@
     "mapView": "Map View",
     "place": {
       "title": "Place Details",
-      "description": "View place details"
+      "description": "View place details",
+      "placeSlugMissing": "Details coming soon..."
     },
     "legal": {
       "imprint": {
