--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -59,7 +59,8 @@
     "mapView": "Térkép nézet",
     "place": {
       "title": "Hely részletei",
-      "description": "Hely részleteinek megtekintése"
+      "description": "Hely részleteinek megtekintése",
+      "placeSlugMissing": "Részletek hamarosan..."
     },
     "legal": {
       "imprint": {
